docs/api/qiskit/0.43/qiskit.primitives.BaseEstimator.mdx
---
title: BaseEstimator
description: API reference for qiskit.primitives.BaseEstimator
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.BaseEstimator
---

# BaseEstimator

<Class id="qiskit.primitives.BaseEstimator" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/primitives/base/base_estimator.py" signature="BaseEstimator(*, options=None)">
  Bases: `BasePrimitive`, `Generic`\[`T`]

  Estimator base class.

  Base class for Estimator that estimates expectation values of quantum circuits and observables.

  Creating an instance of an Estimator, or using one in a `with` context opens a session that holds resources until the instance is `close()` ed or the context is exited.

  **Parameters**

  **options** – Default options.

  ## Methods

  <span id="qiskit-primitives-baseestimator-run" />

  ### run

  <Function id="qiskit.primitives.BaseEstimator.run" name="run" signature="BaseEstimator.run(circuits, observables, parameter_values=None, **run_options)">
    Run the job of the estimation of expectation value(s).

    `circuits`, `observables`, and `parameter_values` should have the same length. The i-th element of the result is the expectation of observable

    ```python
    obs = observables[i]
    ```

    for the state prepared by

    ```python
    circ = circuits[i]
    ```

    with bound parameters

    ```python
    values = parameter_values[i].
    ```

    **Parameters**

    *   **circuits** (*Sequence\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*] |* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – one or more circuit objects.
    *   **observables** (*Sequence\[BaseOperator |* [*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.PauliSumOp")  *| str] | BaseOperator |*[*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.PauliSumOp") *| str*) – one or more observable objects. Several formats are allowed; importantly, `str` should follow the string representation format for [`Pauli`](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli") objects.
    *   **parameter\_values** (*Sequence\[Sequence\[float]] | Sequence\[float] | float | None*) – concrete parameters to be bound.
    *   **run\_options** – runtime options used for circuit execution.

    **Returns**

    The job object of EstimatorResult.

    **Raises**

    *   **TypeError** – Invalid argument type given.
    *   **ValueError** – Invalid argument values given.

    **Return type**

    T
  </Function>

  <span id="qiskit-primitives-baseestimator-set-options" />

  ### set\_options

  <Function id="qiskit.primitives.BaseEstimator.set_options" name="set_options" signature="BaseEstimator.set_options(**fields)">
    Set options values for the estimator.

    **Parameters**

    **\*\*fields** – The fields to update the options
  </Function>

  ## Attributes

  ### circuits

  <Attribute id="qiskit.primitives.BaseEstimator.circuits" name="circuits">
    Quantum circuits that represents quantum states.

    **Returns**

    The quantum circuits.
  </Attribute>

  ### observables

  <Attribute id="qiskit.primitives.BaseEstimator.observables" name="observables">
    Observables to be estimated.

    **Returns**

    The observables.
  </Attribute>

  ### options

  <Attribute id="qiskit.primitives.BaseEstimator.options" name="options">
    Return options values for the estimator.

    **Returns**

    options
  </Attribute>

  ### parameters

  <Attribute id="qiskit.primitives.BaseEstimator.parameters" name="parameters">
    Parameters of the quantum circuits.

    **Returns**

    Parameters, where `parameters[i][j]` is the j-th parameter of the i-th circuit.
  </Attribute>
</Class>

